--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                 <div class="speaker">
                   <img src="images/program/bortoletto.jpg" alt="Marta Bortoletto">
                 </div>
-                <h4>From pre-registration to word-wide collaborative projects</h4>
+                <h4>From pre-registration to world-wide collaborative projects</h4>
                 <h4><span>Marta Bortoletto (IMT, Lucca)</span></h4>
                 <p>Everything You Always Wanted to Know About Open Science* (*But Were Afraid to Ask)</p>
               </div>
@@ -569,18 +569,18 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>13:00</time></div>
+              <div class="col-md-2"><time>13:45</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <!-- <p>Lunch will be served at 'Marameo'</p> -->
+                <p>Lunch will be served at IMT canteen</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>14:00</time></div>
+              <div class="col-md-2"><time>14:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
@@ -591,7 +591,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>15:30</time></div>
+              <div class="col-md-2"><time>16:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/coffee_break.gif" alt="COFFEEEEEE!">
@@ -602,7 +602,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>16:00</time></div>
+              <div class="col-md-2"><time>16:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
@@ -653,18 +653,18 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>13:00</time></div>
+              <div class="col-md-2"><time>13:45</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-                <!-- <p>Lunch will be served at 'Marameo'<p> -->
+                <p>Lunch will be served at IMT canteen</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>14:00</time></div>
+              <div class="col-md-2"><time>14:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
@@ -675,7 +675,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>15:30</time></div>
+              <div class="col-md-2"><time>16:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/coffee_break.gif" alt="COFFEEEEEE!">
@@ -686,7 +686,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>16:00</time></div>
+              <div class="col-md-2"><time>16:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
@@ -737,18 +737,18 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>13:00</time></div>
+              <div class="col-md-2"><time>13:45</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/lunch.jpg" alt="Buon Appetito">
                 </div>
                 <h4>Lunch Break</h4>
-               <!--  <p>Lunch will be served at 'Marameo'</p> -->
+               <p>Lunch will be served at IMT canteen</p>
               </div>
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>14:00</time></div>
+              <div class="col-md-2"><time>14:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/hack.gif" alt="Hack those brains!">
@@ -759,7 +759,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>15:30</time></div>
+              <div class="col-md-2"><time>16:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/coffee_break.gif" alt="COFFEEEEEE!">
@@ -770,7 +770,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>16:00</time></div>
+              <div class="col-md-2"><time>16:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/training.gif" alt="Hack those brains!">
