modified team section

--- a/index.html
+++ b/index.html
@@ -1353,7 +1353,7 @@
             </div>
             <div class="member-info text-center">
               <h4>Davide Coraci</h4>
-              <span>PhD Student</span>
+              <span>Postdoctoral Fellow</span>
               <!-- <p>Aliquam iure quaerat voluptatem praesentium possimus unde laudantium vel dolorum distinctio dire flow</p> -->
             </div>
           </div><!-- End Team Member -->
@@ -1420,7 +1420,7 @@
             </div>
             <div class="member-info text-center">
               <h4>Marco Fioretti</h4>
-              <span>Research Assistant</span>
+              <span>PhD Student</span>
             </div>
           </div><!-- End Team Member -->
 
@@ -1499,7 +1499,7 @@
             </div>
             <div class="member-info text-center">
               <h4>Tommaso Gili</h4>
-              <span>Assistant Professor</span>
+              <span>Associate Professor</span>
               <!-- <p>Sint sint eveniet explicabo amet consequatur nesciunt error enim rerum earum et omnis fugit eligendi cupiditate vel</p> -->
             </div>
           </div><!-- End Team Member -->
