added project 4 and fixed project 3 authors links

--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
 
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/18" target="_blank">The Donnie Darko Project: Analysis of Human and Artificial Target-Tracking Trajectories</a></h3>
-            <p>By <a href="https://github.com/janluca91" target="_blank"><b>Gianluca Maraschio</b>, Francesco Biancalani, Jie Fu & Giorgio Stefano Gnecco</p>
+            <p>By <a href="https://github.com/janluca91" target="_blank"><b>Gianluca Maraschio</b></a>, Francesco Biancalani, Jie Fu & Giorgio Stefano Gnecco</p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj3">Description</a>
 
             <div class="collapse" id='collapse_prj3'>
@@ -1095,35 +1095,35 @@
         <hr>
 
         <!--Project 4-->
-         <!-- <div class="row gy-4 align-items-center projects-item">
+         <div class="row gy-4 align-items-center projects-item">
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/11" target="_blank">Dreamcatcher: decoding dream-event in EEG data with multimodal language models and interpretability tools</a></h3>
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/19" target="_blank">Bias Busters: Exposing Gender Bias in BERT's Latent Space</a></h3>
             <p>
-              By <b>Lorenzo Bertiolini</b>
+              By <a href="https://www.researchgate.net/profile/Gaia-Fiamberti" target="_blank"><b>Gaia Carlotta Fiamberti</b></a> & <a href="https://github.com/riccardovella" target="_blank"><b>Riccardo Vella</b></a>
             </p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj4">Description</a>
 
             <div class="collapse" id='collapse_prj4'>
               <p>
                 <br>
-                In recent years, multimodal systems based on large language models (LLMs) have been successfully applied to encode and decode information from neurophysiological data. Most applications have focused on tracing and reconstructing images and language in the brain, using pictures, textual reports, and EEG data. While previous work has unveiled plausible spatial neural correlates of dream events, its time aspect remains elusive, In this project, we aim to trace dream events in EEG signals, using pre-trained LLMs and standard interpretability tools from the NLP and AI literature.
+                Large language models like BERT and GPT have revolutionized natural language processing but often encode social biases, particularly gender stereotypes. These biases associate certain professions or traits with specific genders, reflecting and sometimes amplifying societal prejudices. This project focuses on uncovering subtle gender biases embedded within the internal representations of these models, even without explicit prompts. Using innovative methods, we measure how likely models are to link professions with male or female pronouns through crafted test sentences. We then develop a mathematical technique to adjust the model’s internal word and sentence representations to neutralize these biases. Additionally, we investigate whether reducing occupational gender bias influences other biases, like those tied to family roles or personal traits, to understand the broader structure of gender bias in AI. This work aims to contribute toward a computational model of stereotypes that can be validated via social experiments.
                 <br>
                 <br>
                 <b>Goals for the BrainHack:</b>
                 <ul>
-                  <li>Develop a framework to pre-process EEG data having different formats for the same LLM</li>
-                  <li>Set up a training regime suitable to the available data</li>
-                  <li>Train and monitor a first set of models or toy examples</li>
-                  <li>Prepare analysis pipeline</li>
-                  <li>Analyse a first set of models</li>
+                  <li>Quantify gender bias in BERT's occupational embeddings using log-probability bias scores (a rigorous metric from Kurita et al., 2019)</li>
+                  <li>Learn an optimal linear transformation that remaps BERT's latent space to reduce gender bias while preserving semantic information</li>
+                  <li>Test generalization across multiple domains (occupations, family roles, personality traits, sentiment) to ensure the debiasing method is robust</li>
                 </ul>
                 <b>Contributors' skills:</b>
                 <br>
                 <ul>
-                  <li>Basic Python for text mining and analysis</li>
-                  <li>Python scientific, neuroscience, or ML (e,g., numpy, scikilearn, seabonr, mne, pytorch, hugging face)</li>
-                  <li>EEG/neuroscience data analysis knowledge</li>
-                  <li>ML/AI knowledge (even basic)</li>
+                  <li>Python Coding</li>
+                  <li>Statistics</li>
+                  <li>NLP and Embeddings</li>
+                  <li>Social Psychology</li>
+                  <li>Critical Thinking</li>
+                  <li>Good Vibes ✨</li>
                 </ul>
               </p>
             </div>
@@ -1134,7 +1134,7 @@
           </div>
         </div> 
 
-        <hr> -->  <!-- Project Item RIGHT -->
+        <hr> <!-- Project Item RIGHT -->
 
         <!--Project 5-->
         <!-- <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
