--- a/index.html
+++ b/index.html
@@ -851,11 +851,11 @@
       <!--  Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Register</h2>
-        <p>Registration <b>is now open!</b></p>
+        <!-- <p>Registration <b>is now open!</b></p> -->
         <!-- <p style='color:red'><b>REGISTRATION DEADLINE IS EXTENDED</b></p> -->
-        <p>Registration will be <b>open until 25/11/2025</b>.</p>
-        <!-- <p>Registration <b>is now closed.</b></p> -->
-        <!-- <p>Email us if you want to try to get a late registration.</p> -->
+        <!-- <p>Registration will be <b>open until 25/11/2025</b>.</p> -->
+        <p>Registration <b>is now closed.</b></p>
+        <p>Email us if you want to try to get a late registration.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -866,12 +866,14 @@
             <div class="register-btn align-items-center justify-content-center d-flex">
               <!-- <div class="icon align-items-left"><a href="" target="_blank"><i class="bi bi-card-checklist"></i></a></div> -->
               <div class="d-flex flex-column align-items-center">
-                <h4 class="title" title="Registration is now open!">
-                  <a href="https://forms.gle/zBVooM7QRqPjrfkr9" target="_blank" class="stretched-link" style='background-color: #002039'>Register</a>
+                <h4 class="title" title="Registration is now closed!">
+                  <a href="https://forms.gle/zBVooM7QRqPjrfkr9" target="_blank" class="stretched-link" 
+                  style='background-color: gray'>Register</a>
+                  <!-- style='background-color: #002039'>Register</a> -->
                 </h4>
                 <!-- <p class="description">Register now using the google form.</p> -->
                 <!-- <p class="description">There are still <b>3 places available!</b></p> -->
-                <p class="description">Registration <b>is now open.</b></p>
+                <p class="description">Registration <b>is now closed.</b></p>
               </div>
             </div>
           </div><!-- End register Item -->
