--- a/index.html
+++ b/index.html
@@ -442,37 +442,14 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-4"><time>13:00</time></div>
-              <div class="col-md-8">
-                <div class="speaker">
-                  <img src="images/program/lunch.jpg" alt="Buon Appetito">
-                </div>
-                <h4>Lunch Break</h4>
-                <!-- <p>Lunch will be served at 'Marameo'</p> -->
-              </div>
-            </div>
-
-            <div class="row schedule-item">
               <div class="col-md-10 schedule-org">
                 <h4>INTERMEDIATE</h4>
                 <p>Hosted in Cappella Guinigi</p>
               </div>
             </div>
 
-            <div class="row schedule-item">
-              <div class="col-md-4"><time>13:50</time></div>
-              <div class="col-md-8">
-                <div class="speaker">
-                  <img src="images/program/molino.png" alt="Anna Molino">
-                </div>
-                <h4>Open Access @ IMT Library</h4>
-                <h4><span>Anna Molino (IMT, Lucca)</span></h4>
-                <p>Current Services and Future Perspectives</p>
-              </div>
-            </div>
-
-            <div class="row schedule-item">
-              <div class="col-md-4"><time>14:10</time></div>
+             <div class="row schedule-item">
+              <div class="col-md-4"><time>13:00</time></div>
               <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/iacovella.png" alt="Vittorio Iacovella">
@@ -484,7 +461,30 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-4"><time>15:10</time></div>
+              <div class="col-md-4"><time>14:00</time></div>
+              <div class="col-md-8">
+                <div class="speaker">
+                  <img src="images/program/lunch.jpg" alt="Buon Appetito">
+                </div>
+                <h4>Lunch Break</h4>
+                <p>Lunch will be served at IMT canteen</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-4"><time>14:45</time></div>
+              <div class="col-md-8">
+                <div class="speaker">
+                  <img src="images/program/molino.png" alt="Anna Molino">
+                </div>
+                <h4>Open Access @ IMT Library</h4>
+                <h4><span>Anna Molino (IMT, Lucca)</span></h4>
+                <p>Current Services and Future Perspectives</p>
+              </div>
+            </div>
+
+            <div class="row schedule-item">
+              <div class="col-md-4"><time>15:00</time></div>
               <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/pirri.jpg" alt="Anna Pirri Valentini">
@@ -496,7 +496,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-4"><time>16:10</time></div>
+              <div class="col-md-4"><time>16:00</time></div>
               <div class="col-md-8">
                 <div class="speaker">
                   <img src="images/program/coffee_break.gif" alt="COFFEEEEEE">
@@ -675,7 +675,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>16:00</time></div>
+              <div class="col-md-2"><time>16:30</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/coffee_break.gif" alt="COFFEEEEEE!">
@@ -686,18 +686,7 @@
             </div>
 
             <div class="row schedule-item">
-              <div class="col-md-2"><time>16:30</time></div>
-              <div class="col-md-10">
-                <div class="speaker">
-                  <img src="images/program/hack.gif" alt="Hack those brains!">
-                </div>
-                <h4>Hacking session<span> - Group Work</span></h4>
-                <p>Collective work on projects!</p>
-              </div>
-            </div>
-
-            <div class="row schedule-item">
-              <div class="col-md-2"><time>17:30</time></div>
+              <div class="col-md-2"><time>17:00</time></div>
               <div class="col-md-10">
                 <div class="speaker">
                   <img src="images/program/barattieri_dsp.jpg" alt="Chiara Barattieri di San Pietro">
