--- a/index.html
+++ b/index.html
@@ -477,9 +477,9 @@
                 <div class="speaker">
                   <img src="images/program/molino.png" alt="Anna Molino">
                 </div>
-                <h4>Open Access @ IMT Library</h4>
+                <h4>Empowering Researchers</h4>
                 <h4><span>Anna Molino (IMT, Lucca)</span></h4>
-                <p>Current Services and Future Perspectives</p>
+                <p>How Academic Institutions Can Support Open Access Publishing</p>
               </div>
             </div>
 
