--- a/index.html
+++ b/index.html
@@ -1172,25 +1172,28 @@
         <hr> <!-- Project Item LEFT -->
 
         <!--Project 6-->
-         <!-- <div class="row gy-4 align-items-center projects-item">
+        <div class="row gy-4 align-items-center projects-item">
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
-            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/13" target="_blank">The Influence of Arousal on Brain Connectivity: A Multimodal Study Proposal</a></h3>
+            <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/21" target="_blank">Decoding speech hierarchies in phantom-head 'Brain-less' EEG vs. real brain</a></h3>
             <p>
-              By <b>Santa Sozzi, Miriam Acquafredda & Giacomo Mazzotta</b>
+              By <b>Francesca Collesei, Alessandra Federici, Giacomo Handjaras, Francesca Schiavone</b>, Davide Bottari, Erica Iob
             </p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj6">Description</a>
 
             <div class="collapse" id='collapse_prj6'>
               <p>
                 <br>
-                Arousal, defined as the behavioral state of alertness, is a potential driver of variability in brain activity and functional connectivity, particularly within networks such as the Default Mode Network and the Salience Network. In this project, we aim to investigate the effects of arousal on brain connectivity using a recently published open-access dataset that integrates pre-processed pupillometry, fMRI, and EEG data, enabling a comprehensive multimodal analysis.
-                By combining pupillometry (as a proxy to identify high and low arousal levels), EEG (offering high temporal resolution of brain activity), and fMRI (providing high spatial resolution of functional activity), we can investigate the relationships between arousal states and both functional and effective connectivity across key brain regions.
+                Human brain is able to track hierarchical information embedded in naturalistic continuous speech. What about a phantom head with no brain but an artificial ear?
+                The project aims to decode speech features information embedded in stories presented as audiobooks using activity recorded from an EEG phantom head equipped with a device converting sounds into electrical signals. The hierarchical speech features that we will try to decode include low-level acoustic features (e.g., envelope and spectrogram) and higher-level linguistic features (e.g., word frequency and lexical surprisal). We will assess how well this ‘brain-less’ EEG captures different information embedded in the speech signal by directly comparing it to real-brain EEG.
+                What makes this project exciting is that we will try to test speech features decoding in a fully controlled, artificial system. To get started, one can begin by familiarizing themselves with EEG recording data and acoustic and linguistic features that can be extracted from continuous speech.
+                Whether you are an expert or a complete beginner in decoding continuous, naturalistic information from EEG signals, it is a unique opportunity to learn and master cutting-edge neuroscience skills to work with ecological continuous stimuli. Plus, how many people can say they’ve worked with EEG activity from a phantom head?
                 <br>
                 <br>
                 <b>Goals for the BrainHack:</b>
                 <ul>
-                  <li>Identify arousal-related brain regions through the analysis of the relationships between pupil dynamics and fMRI signals at both voxel and region levels (e.g., via correlation or regression analyses on resting-state data)</li>
-                  <li>Compare functional and effective connectivity within arousal-related networks across high and low arousal states, using indices derived from both fMRI and EEG resting-state connectivity</li>
+                  <li>Day 1) Check if we are equipped with correct matrices of speech features and EEG data to work on decoding scripts using mTRF toolbox in MATLAB. Develop the method to decode acoustic features (i.e., spectrogram and envelope) from EEG phantom head and compare it with real-brain EEG data</li>
+                  <li>Day 2) Apply the developed method to decode other speech features (e.g., phoneme onset, word onset, lexical surprisal) and extract more complex linguistic information</li>
+                  <li>Day 3) Compare accuracy of each model between phantom EEG sessions and real-brain EEGs, and summarize findings in a report or presentation</li>
                 </ul>
                 As a secondary objective, we aim to replicate these analyses on a visual task dataset to compare the impact of arousal under resting-state and task-based conditions.
                 <br>
@@ -1198,9 +1201,13 @@
                 <b>Contributors' skills:</b>
                 <br>
                 <ul>
-                  <li>MATLAB programming (basic)</li>
-                  <li>Python programming (basic)</li>
-                  <li>Basic fMRI/EEG/pupillometry analysis knowledge</li>
+                  <li>Knowledge of acoustic features in continuous speech</li>
+                  <li>Knowledge of semantic features in continuous speech</li>
+                  <li>Linguistic knowledge</li> 
+                  <li>Decoding</li>
+                  <li>Matlab</li>
+                  <li>Python</li>
+                  <li>Sharing ideas</li>
                 </ul>
               </p>
             </div>
@@ -1211,7 +1218,7 @@
           </div>
         </div> 
 
-        <hr> -->  <!-- Project Item RIGHT -->
+        <hr>  <!-- Project Item RIGHT -->
 
         <!--Project 7-->
         <!-- <div class="row gy-4 align-items-stretch justify-content-between projects-item ">
