updated project contributors for project 4

--- a/index.html
+++ b/index.html
@@ -1090,7 +1090,7 @@
           <div class="col-lg-6 d-flex justify-content-center flex-column" data-aos="fade-up">
             <h3><a href="https://github.com/brainhacklucca/brainhacklucca.github.io/issues/19" target="_blank">Bias Busters: Exposing Gender Bias in BERT's Latent Space</a></h3>
             <p>
-              By <a href="https://www.researchgate.net/profile/Gaia-Fiamberti" target="_blank"><b>Gaia Carlotta Fiamberti</b></a> & <a href="https://github.com/riccardovella" target="_blank"><b>Riccardo Vella</b></a>
+              By <a href="https://www.researchgate.net/profile/Gaia-Fiamberti" target="_blank"><b>Gaia Carlotta Fiamberti</b></a>, <a href="https://github.com/riccardovella" target="_blank"><b>Riccardo Vella</b>, Tea Tucić, Francesco Pillitteri</a>
             </p>
             <a class="btn btn-get-started align-self-start" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_prj4">Description</a>
 
