--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@
               <div class="col-md-2"><time>09:45</time></div>
               <div class="col-md-5">
                 <div class="speaker">
-                  <img src="images/program/pinelli.jpeg" alt="Fabio Pinelli">
+                  <img src="images/program/betti.png" alt="Alessandro Betti">
                 </div>
                 <h4>Training: Python basics</h4>
-                <h4><span>Fabio Pinelli (IMT, Lucca)</span></h4>
+                <h4><span>Alessandro Betti (IMT, Lucca)</span></h4>
                 <p>Brief Introduction to Python</p>
               </div>
               <div class="col-md-5">
@@ -405,10 +405,10 @@
               <div class="col-md-2"><time>10:50</time></div>
               <div class="col-md-5">
                 <div class="speaker">
-                  <img src="images/program/pinelli.jpeg" alt="Fabio Pinelli">
+                  <img src="images/program/betti.png" alt="Alessandro Betti">
                 </div>
                 <h4>Training: Going on with Python</h4>
-                <h4><span>Fabio Pinelli (IMT, Lucca)</span></h4>
+                <h4><span>Alessandro Betti (IMT, Lucca)</span></h4>
                 <p>Start programming with Python</p>
               </div>
               <div class="col-md-5">
